@@ -75,8 +75,7 @@ public class BotDetectionsResource extends AbstractResource {
         checkAnyPermission(organizationId, environmentId, domain, Permission.DOMAIN_BOT_DETECTION, Acl.LIST)
                 .andThen(domainService.findById(domain)
                         .switchIfEmpty(Maybe.error(new DomainNotFoundException(domain)))
-                        .flatMapSingle(___ -> botDetectionService.findByDomain(domain))
-                        .map(botDetections -> botDetections.stream().map(this::filterBotDetectionInfos).collect(Collectors.toList())))
+                        .flatMapSingle(___ -> botDetectionService.findByDomain(domain).map(this::filterBotDetectionInfos).toList()))
                 .subscribe(response::resume, response::resume);
     }
 
